--- a/styles/main.scss
+++ b/styles/main.scss
@@ -158,16 +158,16 @@ img {
 
 		h1 {
 			font-family: 'Kaushan Script', cursive;
-			font-size: 100px;
+			font-size: 95px;
 			font-weight: 400;
     		font-style: normal;
     		line-height: 1.2;
     		@media screen and (max-width: 1023px) {
-    			font-size: 80px;
+    			font-size: 75px;
     		}
     		@media screen and (max-width: 767px) {
 				font-size: 38px;
-				line-height: 1.4l;
+				line-height: 1.6;
 			}
     	}
 
